--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ projects:
       - OSOL.Extremum_old
       - OSOL.Extremum_Tasks
       - KaimereApp
+      - wol4aravio.github.io
 
 social_media:
   telegram: wol4aravio
